Upgrade pro/plus subscription button messaging #4033

--- a/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
+++ b/src/app/modules/composer/components/popup/monetize/v2/components/plus/plus.component.html
@@ -59,7 +59,7 @@
       (click)="openPlusUpgradeModal()"
       i18n="@@COMPOSER__MONETIZE_PLUS_UPGRADE_TO_PRO"
     >
-      Upgrade to Minds Plus
+      Upgrade to Minds+
     </m-shadowboxSubmitButton>
   </ng-container>
 </div>
