--- a/src/app/modules/media/youtube-migration/marketing/marketing.component.html
+++ b/src/app/modules/media/youtube-migration/marketing/marketing.component.html
@@ -79,7 +79,7 @@
             class="m-marketing__description"
             i18n="@@MARKETING_YT_MIGRATION__MINDS_PLUS_AND_PRO_FEATURES"
           >
-            <a routerLink="/plus">Minds Plus</a> and
+            <a routerLink="/plus">Minds+</a> and
             <a routerLink="/pro">Pro</a> members unlock additional monetization
             features, including revenue-sharing and monthly cash payments for
             pageviews and referrals.
