--- a/src/app/modules/pro/subscription/subscription.component.html
+++ b/src/app/modules/pro/subscription/subscription.component.html
@@ -45,50 +45,50 @@
       </span>
     </div>
 
-    <div>
-      <ng-container *mIfFeature="'purchase-pro'; else comingSoon">
-        <div class="m-proSubscription__button">
-          <button
-            class="mf-button mf-button--alt"
-            [disabled]="active || inProgress || criticalError"
-            (click)="enable()"
-            i18n="@@PRO_SUBSCRIPTION__UPGRADE_TO_PRO"
+    <div class="m-proSubscription__buttonsContainer">
+      <div class="m-proSubscription__button">
+        <button
+          class="mf-button mf-button--alt"
+          [disabled]="active || inProgress || criticalError"
+          (click)="enable()"
+          i18n="@@PRO_SUBSCRIPTION__UPGRADE_TO_PRO"
+        >
+          Upgrade to Pro
+        </button>
+        <div class="m-proSubscriptionButton__notice" *ngIf="active">
+          <span
+            i18n="@@PRO_SUBSCRIPTION__DISABLED_BECAUSE_CANCELLED"
+            *ngIf="!hasSubscription"
+            >You still have Minds Pro until {{ expiryString }}.</span
           >
-            Upgrade to Pro
-          </button>
-          <div class="m-proSubscription__alreadyAMemberNotice" *ngIf="active">
+          <ng-container *ngIf="hasSubscription">
             <span i18n="@@PRO_SUBSCRIPTION__ALREADY_PRO_MEMBER"
               >You're already a Pro member.</span
             >
             <a
               [routerLink]="[
-                '/pro',
+                '/settings',
+                'pro_canary',
                 session.getLoggedInUser().username,
-                'settings',
-                'subscription'
+                'cancel'
               ]"
               i18n="@@PRO_SUBSCRIPTION__MANAGE_MEMBERSHIP"
             >
               Manage membership.
             </a>
-          </div>
+          </ng-container>
         </div>
-        <button
-          class="mf-button mf-button--alt"
-          *ngIf="session.getLoggedInUser() && !active"
-          [routerLink]="[
-            '/pro/' + session.getLoggedInUser().username + '/settings'
-          ]"
-          i18n="@@PRO_SUBSCRIPTION__TRY_PRO"
-        >
-          Try Pro
-        </button>
-      </ng-container>
-      <ng-template #comingSoon>
-        <button class="mf-button mf-button--alt" i18n="@@COMMON__COMING_SOON">
-          Coming soon
-        </button>
-      </ng-template>
+      </div>
+      <button
+        class="mf-button mf-button--alt"
+        *ngIf="session.getLoggedInUser() && !active"
+        [routerLink]="[
+          '/pro/' + session.getLoggedInUser().username + '/settings'
+        ]"
+        i18n="@@PRO_SUBSCRIPTION__TRY_PRO"
+      >
+        Try Pro
+      </button>
     </div>
   </div>
 </ng-container>
