--- a/src/app/modules/settings-v2/pro/cancel/cancel.component.html
+++ b/src/app/modules/settings-v2/pro/cancel/cancel.component.html
@@ -19,7 +19,7 @@
 <div *ngIf="init" class="m-formLayout--buttonLeft">
   <div class="m-form__buttonsContainer">
     <m-shadowboxSubmitButton
-      [disabled]="inProgress || !isActive"
+      [disabled]="(isActive && !hasSubscription) || inProgress || !isActive"
       [saving]="inProgress"
       color="red"
       (click)="cancelSubscription()"
@@ -29,3 +29,9 @@
     </m-shadowboxSubmitButton>
   </div>
 </div>
+<span
+  class="m-settingV2__proCancelNotice"
+  i18n="@@PRO_SUBSCRIPTION__DISABLED_BECAUSE_CANCELLED"
+  *ngIf="isActive && !hasSubscription"
+  >You still have Minds Pro until {{ expiryString }}.</span
+>
