--- a/src/app/modules/blogs/v2/edit/editor-base.component.ng.scss
+++ b/src/app/modules/blogs/v2/edit/editor-base.component.ng.scss
@@ -138,6 +138,8 @@
           font-family: 'Roboto';
           font-size: 42px;
           font-weight: bold;
+          resize: none;
+          overflow: hidden;
         }
       }
     }
