Fixes issue with back button on mobile devices viewing single entities

--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -112,7 +112,7 @@
     <ng-container *ngIf="!isModal; else image">
       <a
         class="m-activityContentMedia__link"
-        [routerLink]="['/media', imageGuid]"
+        [routerLink]="['/newsfeed', imageGuid]"
         (click)="onModalRequested($event)"
         ><ng-container [ngTemplateOutlet]="image"></ng-container
       ></a>
@@ -122,7 +122,6 @@
         [src]="imageUrl"
         [style.height]="imageHeight"
         (error)="onImageError($event)"
-        (click)="onModalRequested($event)"
     /></ng-template>
   </div>
 </ng-container>
