--- a/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-phone/verify-phone.component.html
+++ b/src/app/modules/onboarding-v3/panel/verify-uniqueness/verify-phone/verify-phone.component.html
@@ -11,7 +11,7 @@
         class="m-onboardingUniqueness__tooltip"
         i18n="@@ONBOARDING_VERIFY_PHONE__INPUT_YOUR_NUMBER"
       >
-        Input your phone number
+        <span>Input your phone number</span>
       </m-tooltip>
       <div></div>
       <!-- Spacer -->
@@ -30,7 +30,7 @@
         (click)="onSend()"
         i18n="@@ONBOARDING_VERIFY_PHONE__SEND_VERIFICATION_CODE"
       >
-        Send verification code
+        <span>Send verification code</span>
       </button>
     </div>
     <!-- Friend finder checkbox -->
