--- a/src/app/modules/onboarding-v3/widget/onboarding-widget.component.ng.scss
+++ b/src/app/modules/onboarding-v3/widget/onboarding-widget.component.ng.scss
@@ -56,6 +56,9 @@
       }
 
       .m-onboardingWidget__stepsContainer {
+        display: flex;
+        flex-direction: column;
+
         > * + * {
           margin-top: 16px;
         }
