Reverting wallet module requirements

--- a/src/app/modules/onboarding-v3/panel/bank/bank.component.html
+++ b/src/app/modules/onboarding-v3/panel/bank/bank.component.html
@@ -1,1 +1,2 @@
-<m-walletSettings--cash [embedded]="true"></m-walletSettings--cash>
+<!-- TODO: Add a new shared module for required wallet module components-->
+<!-- <m-walletSettings--cash [embedded]="true"></m-walletSettings--cash> -->
