Fix background image being undefined

--- a/src/app/modules/embed/embedded-video/embedded-video.component.html
+++ b/src/app/modules/embed/embedded-video/embedded-video.component.html
@@ -17,6 +17,7 @@
     <div
       class="m-embedded-video__channel-avatar"
       [ngStyle]="{ 'background-image': 'url(' + avatarSrc + ')' }"
+      *ngIf="avatarSrc"
     ></div>
   </a>
   <a href="{{ mediaUrl }}" class="m-embedded-video__title">{{ title }}</a>
