(fix): images not opening modal

--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -122,6 +122,7 @@
         [src]="imageUrl"
         [style.height]="imageHeight"
         (error)="onImageError($event)"
+        (click)="onModalRequested($event)"
     /></ng-template>
   </div>
 </ng-container>
