(refactor): engine#1454 - Reminds, quoted posts and merged posts

--- a/src/app/modules/composer/components/base/base.component.html
+++ b/src/app/modules/composer/components/base/base.component.html
@@ -24,6 +24,10 @@
         (filePaste)="onAttachmentPaste($event)"
         #textAreaComponent
       ></m-composer__textArea>
+
+      <m-composerRemindPreview
+        *ngIf="remind$ | async"
+      ></m-composerRemindPreview>
     </div>
     <m-composer__toolbar
       (onPost)="onPost($event)"
