update shadowbox button styles

--- a/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.html
+++ b/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.html
@@ -4,9 +4,13 @@
   [disabled]="disabled"
   [ngClass]="{
     saving: saving,
-    green: color === 'green',
     grey: color === 'grey',
-    red: color === 'red'
+    blue: color === 'blue',
+    red: color === 'red',
+    small: size === 'small',
+    medium: size === 'medium',
+    large: size === 'large',
+    overlay: overlay
   }"
 >
   <div
