--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -42,7 +42,7 @@
             class="m-v3Topbar__logo--full"
           />
         </a>
-
+        <m-canaryFlag></m-canaryFlag>
         <div
           class="m-v3TopbarNav__item m-v3TopbarNav__item--hamburger"
           (click)="toggleSidebarNav()"
